@@ -1,3 +1,7 @@
+2010-10-20 A. Degremont <aurelien.degremont@cea.fr>
+
+	* NodeSet.py: Optimize NodeSetBase iteration.
+
 2010-10-17 S. Thiell <stephane.thiell@cea.fr>
 
 	* Engine/Factory.py: Re-enable EPoll engine (closes trac ticket #56).
